Don't create a new Boolean
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@124966 13f79535-47bb-0310-9956-ffa450edef68